# test-task

./: .gitignore  pyproject.toml  readme.md
tasks/: db.sqlite3
tasks/first/: forms.py  models.py  urls.py  views.py
tasks/first/migrations/: 0001_initial.py
tasks/first/templates/first/: base.html  firsttask.html  firsttaskdoc.html
tasks/first/templates/first/firsttask/: nodata.html  rate.html
tasks/logs/: settings.py
tasks/second/: forms.py  models.py  urls.py  views.py
tasks/second/migrations/: 0001_initial.py
tasks/second/templates/second/: secondtask.html  secondtaskdoc.html
tasks/second/templates/second/secondtask/: rate.html
tasks/services/: middleware.py
tasks/static/css/: main_style.css
tasks/static/js/: bootstrap.bundle.min.js
tasks/tasks/: settings.py  urls.py
